--- a/app/src/main/res/navigation/main_activity_nav.xml
+++ b/app/src/main/res/navigation/main_activity_nav.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_anasayfaFragment_to_detayFragment"
             app:destination="@id/detayFragment" />
+        <action
+            android:id="@+id/bottomSheetGecis"
+            app:destination="@id/bottomSheetFragment" />
     </fragment>
     <fragment
         android:id="@+id/detayFragment"
@@ -39,4 +42,14 @@
             android:name="urun"
             app:argType="com.sametersoyoglu.kbnavigationcomponentkullanimi.Urunler" />
     </fragment>
+    <dialog
+        android:id="@+id/bottomSheetFragment"
+        android:name="com.sametersoyoglu.kbnavigationcomponentkullanimi.BottomSheetFragment"
+        android:label="fragment_bottom_sheet"
+        tools:layout="@layout/fragment_bottom_sheet" />
+    <fragment
+        android:id="@+id/ayarlarFragment"
+        android:name="com.sametersoyoglu.kbnavigationcomponentkullanimi.AyarlarFragment"
+        android:label="fragment_ayarlar"
+        tools:layout="@layout/fragment_ayarlar" />
 </navigation>
